--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,6 @@ jobs:
       packages: write
     env:
       REGISTRY: ghcr.io
-      IMAGE_NAME: misskey-railway
     steps:
       - uses: actions/checkout@v4
       - uses: docker/login-action@v3
@@ -24,6 +23,6 @@ jobs:
       - uses: docker/build-push-action@v5
         with:
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          tags: ${{ env.REGISTRY }}/mkizka/misskey-railway:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
