--- a/package.json
+++ b/package.json
@@ -9,5 +9,6 @@
     "esbuild": "^0.19.11",
     "js-yaml": "^4.1.0",
     "read-env": "^2.0.0"
-  }
+  },
+  "packageManager": "pnpm@8.14.0+sha256.9cebf61abd83f68177b29484da72da9751390eaad46dfc3072d266bfbb1ba7bf"
 }
