--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Docker image to ghcr.io
+name: Deploy docker image to ghcr.io
 
 on:
   push:
@@ -31,5 +31,3 @@ jobs:
         with:
           push: true
           tags: ${{ env.REGISTRY }}/mkizka/misskey-railway:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
