--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "private": "true",
   "scripts": {
-    "build": "node build.js"
+    "build": "node build.js",
+    "format": "prettier --write ."
   },
   "dependencies": {
-    "esbuild": "^0.19.11",
-    "js-yaml": "^4.1.0",
-    "read-env": "^2.0.0"
+    "esbuild": "0.19.11",
+    "js-yaml": "4.1.0",
+    "read-env": "2.0.0"
+  },
+  "devDependencies": {
+    "prettier": "3.1.1"
   },
   "packageManager": "pnpm@8.14.0+sha256.9cebf61abd83f68177b29484da72da9751390eaad46dfc3072d266bfbb1ba7bf"
 }
