--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,8 @@ jobs:
       packages: write
     env:
       REGISTRY: ghcr.io
+      IMAGE_NAME: mkizka/misskey-railway
+      MISSKEY_VERSION: 2023.12.2
     steps:
       - uses: actions/checkout@v4
       - uses: docker/login-action@v3
@@ -20,7 +22,16 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - uses: docker/setup-buildx-action@v3
-      - uses: docker/build-push-action@v5
+      - uses: docker/metadata-action@v5
+        id: meta
         with:
-          push: true
-          tags: ${{ env.REGISTRY }}/mkizka/misskey-railway:latest
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=raw,value=${{ env.MISSKEY_VERSION }}
+            type=raw,value=latest
+      - uses: docker/build-push-action@v5
+        tags: ${{ steps.meta.outputs.tags }}
+        build-args: |
+          MISSKEY_VERSION=${{ env.MISSKEY_VERSION }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
