--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,7 @@ jobs:
             type=raw,value=latest
       - uses: docker/build-push-action@v5
         with:
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           build-args: MISSKEY_VERSION=${{ env.MISSKEY_VERSION }}
           cache-from: type=gha
