--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:js-app"
-  ],
+  "extends": ["config:js-app"],
   "automerge": true,
   "platformAutomerge": true,
   "customManagers": [
